Use non-deprecated API fields for 10.2+ and 10.4+